--- a/ansible/static-site/site.yaml
+++ b/ansible/static-site/site.yaml
@@ -8,7 +8,7 @@
         update_cache: yes
         name:
           - python3-pip
-          - docker
+          - docker.io
           - docker-compose
 
     - name: Start Docker
