--- a/ansible/static-site/site.yaml
+++ b/ansible/static-site/site.yaml
@@ -17,6 +17,9 @@
         state: started
         enabled: yes
 
+    - name: print current directory
+      shell: pwd && ls -la
+
     - name: copy staycation folder to /opt
       copy:
         src: ../../staycationX
