--- a/ansible/static-site/site.yaml
+++ b/ansible/static-site/site.yaml
@@ -9,7 +9,7 @@
         name:
           - python3-pip
           - docker.io
-          - docker-compose
+          - docker-compose-v2
 
     - name: Start Docker
       service:
