--- a/ansible/static-site/site.yaml
+++ b/ansible/static-site/site.yaml
@@ -8,12 +8,9 @@
         update_cache: yes
         name:
           - python3-pip
-          - docker.io
-    
+              
     - name: install docker-compose
-      pip:
-        name:
-          - docker-compose
+      shell: apt install -y docker-compose docker.io
 
     - name: Start and enable Docker
       service:
