--- a/staycationX/docker-compose.yml
+++ b/staycationX/docker-compose.yml
@@ -13,7 +13,10 @@ services:
 
   db:
     container_name: ict381db
-    image: mongo
+    image: ict381mongo
+    build:
+      context: .
+      dockerfile: DockerfileMongo
     networks:
       - ict381network
     ports:
